# i-cant-make-music

./: Cargo.toml  README.md  openapi.yaml
i-cant-make-music-web-client/: index.html  package-lock.json  package.json
i-cant-make-music-web-client/src/: App.tsx
i-cant-make-music-web-client/src/api/: client.ts
i-cant-make-music-web-client/src/components/: BpmInput.tsx  Track.tsx
i-cant-make-music-web-client/src/hooks/: useMusic.ts
i-cant-make-music-web-client/src/types/: api.ts
src/: main.rs  types.rs
src/rest_api/: handle_delete_tracks.rs  handle_get_sounds.rs  handle_get_state.rs  handle_post_tracks.rs  handle_put_bpm.rs  handle_put_tracks.rs  mod.rs
