[package]
name = "i-cant-make-music"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.17"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.*"
axum-server = { version = "0.7" }
uuid = { version = "1.18.1", features = ["v4"] }
